--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
 
 :root{
     --green:#0a775f;
+    --green-80:rgba(10, 119, 95,0.8);
+    --green-60:rgba(10, 119, 95, 0.6);
+    --brown:rgba(201, 155, 103);
+    --brown-80:rgba(201, 155, 103,0.8);
+    --brown-60:rgba(201, 155, 103,0.6);
+    --light-brown:#f3d7b7;
     --outline-color:var(--green);
 }
 
@@ -53,8 +59,33 @@ body{
     margin-right: auto;
 }
 
-
-
+.main-button {
+    display: flex;
+    border: 0;
+    border-radius: 100px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+    padding: 16px 24px 16px 24px;
+    letter-spacing: 1px;
+    white-space: nowrap;
+    }
+    .button-green{
+        background-color: var(--green);
+        color:#fff;
+    }
+   .button-green:hover{
+    background-color: var(--green-80);
+   }
+   .button-green:hover{
+    background-color: var(--green-60);
+   }
+   .button-brown:hover{
+    background-color: var(--brown-80);
+   }
+   .button-brown:hover{
+    background-color: var(--brown-60);
+   }
 /* FONTS  */
 
 
@@ -80,6 +111,7 @@ body{
 }
 .site-header-intro-wrapper{
     background-image: url(../img/light-bg-img.jpg);
+    background-color: ;
 }
 
 .header-container{
@@ -142,6 +174,7 @@ line-height: 14px;
 letter-spacing: 1px;
 text-align: left;
 text-transform: uppercase;
+white-space: nowrap;
 }
 
 .sitenav-link:hover{
@@ -157,18 +190,20 @@ opacity: 0.8;
 }
 /* SITE HERO  */
 .site-hero {
-    padding-top: 119px;
-    padding-bottom: 243px;
- background-image: url(../img/hero-img.jpeg);
- background-repeat: no-repeat;
- background-size: contain;
- background-position: bottom right;
 }
 .hero-container {
-    width: 100%;
-    max-width: 464px;
-    margin-left: 134px;
+   display: flex;
+   padding-left: 0;
+   padding-right: 0;
     
+}
+.hero-info-wrapper{
+    width: 100%;
+    max-width: 730px;
+    padding-top: 116px;
+    padding-bottom: 100px;
+    padding-left: 150px;
+    padding-right: 116px;
 }
 .hero-header {
     margin-top: 0;
@@ -176,13 +211,12 @@ opacity: 0.8;
     color:#000;
 font-size: 64px;
 font-weight: 700;
-line-height: 75px;
+line-height: normal;
 letter-spacing: 0px;
 text-align: left;
 }
 .hero-text {
-    margin-top: 0;
-    margin-bottom: 34px;
+  margin: 0;
     color: #000;
 font-size: 16px;
 font-weight: 400;
@@ -190,19 +224,17 @@ line-height: 24px;
 letter-spacing: 0px;
 text-align: left;
 }
-.main-button {
-width: 193px;
-height: 51px;
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-border: 0;
-border-radius: 100px;
-font-weight: 500;
-padding: 16px 24px 16px 24px;
-background-color: var(--green);
-color:#fff;
+.hero-text:not(:last-child){
+    margin-bottom: 32px;
+}
+
+.hero-img{
+    width: 710px;
+    height: 596px;
+    object-fit: cover;
+}
+.hero-img-index{
+    height: 696px;
 }
 
 /* OUR COLLECTION  */
