--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ text-align: left;
 .collections-item {
     display: flex;
     align-items: center;
-    width: 390px;
+   
 }
 .collections-item:not(:last-child){
     margin-bottom: 120px;
@@ -280,7 +280,14 @@ text-align: left;
 .collections-item:nth-child(even) {
    flex-direction: row-reverse;
 }
-
+/* .collections-item:nth-child(1) .collections-header-text-wrapper,
+.collections-item:nth-child(3) .collections-header-text-wrapper{
+    padding-left: 117px;
+}
+.collections-item:nth-child(2) .collections-header-text-wrapper,
+.collections-item:nth-child(4) .collections-header-text-wrapper{
+    padding-right: 117px;
+} */
 .collections-image {
     flex-shrink: 0;
    
@@ -290,6 +297,8 @@ text-align: left;
 }
 .collection-header-text-wrapper{
     flex-grow: 1;
+    padding-left: 117px;
+    padding-right: 117px;
 }
 .collections-header {
     margin-top: 0;
@@ -311,10 +320,7 @@ text-align: left;
     text-align: left;
     width: 390px;
 }
-.collections-item:nth-child(1) .collections-header-text-wrapper,
-.collections-item:nth-child(3) .collections-header-text-wrapper{
-    padding-left: 117px;
-}
+
 /* RETINA BG  */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
